<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">RelativeLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="smartphone">Smartphone</string>
    <string name="tablet">Tablet</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>